--- a/src/main/resources/templates/Test/products.html
+++ b/src/main/resources/templates/Test/products.html
@@ -49,6 +49,9 @@
     <label for="description">Des:</label>
     <input type="text" id="description" th:field="*{description}" />
 
+    <label for="categoryid">Cate:</label>
+    <input type="text" id="categoryid" th:field="*{category}" />
+
     <label for="imaged">Img:</label>
     <input type="file" id="imaged" name="imaged" accept="image/*" />
 
