--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -85,7 +85,8 @@
                 <div class="bg-light rounded h-100 p-4">
                     <div class="mb-4">
                         <label for="categoryName" class="form-label">Tên danh mục</label>
-                        <input class="form-control" id="categoryName" placeholder="Nhập tên danh mục" required>
+                        <input class="form-control" id="categoryName" placeholder="Nhập tên danh mục" required
+                               th:field="*{categoryName}">
                         <div class="invalid-feedback">
                             Vui lòng nhập tên sản phẩm.
                         </div>
@@ -105,7 +106,7 @@
                     
                     <div class="table-responsive">
                         <table id="productTable" class="table table-hover" style="width:100%"
-                               th:each="categories : ${categories}">
+                               >
                             <thead>
                                 <tr>
                                     <th></th>
@@ -113,21 +114,9 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td th:text="${category.id}"></td>
-                                    <td th:text="${category.name}" ></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>Danh mục 1</td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>Danh mục 2</td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>Danh mục 3</td>
+                                <tr th:each="categories : ${categories}">
+                                    <td th:value="${categories.categoryId}"></td>
+                                    <td th:text="${categories.categoryName}" ></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -161,7 +150,7 @@
     <!-- Template Javascript -->
     <script src="/js/main.js"></script>
     <script src="/js/form-validation.js"></script>
-    <script src="/js/drop-image.js"></script>
+<!--    <script src="/js/drop-image.js"></script>-->
 
     <!-- Datatables -->
     <script src="https://cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
